--- a/hw2-pset.ipynb
+++ b/hw2-pset.ipynb
@@ -5,18 +5,18 @@
    "id": "898baed3",
    "metadata": {},
    "source": [
-    "# HW 3: The 🤗 Transformers Framework\n",
-    "**Due: March 29, 9:30 AM**\n",
+    "# HW 2: Efficient Fine-Tuning with BitFit?\n",
+    "**Due: February 24, 9:30 AM**\n",
     "\n",
     "In this homework assignment, you will replicate [the BitFit experiments (Zaken et al., 2020)](https://aclanthology.org/2022.acl-short.1/), whose paper we read and analyzed together in class. You will first use the [🤗 Transformers framework](https://huggingface.co/docs/transformers/index) to fine-tune a [BERT$_\\text{tiny}$ model](https://huggingface.co/prajjwal1/bert-tiny) ([Turc et al., 2019](https://arxiv.org/abs/1908.08962); [Bhargava et al., 2021](https://aclanthology.org/2021.insights-1.18/)) on the IMDb dataset. You will then fine-tune the same model, but with all parameters frozen other than the bias terms. You will compare the two models on the following metrics: (1) their accuracy on the IMDb test set and (2) the number of parameters trained during fine-tuning.\n",
     "\n",
     "## Important: Read Before Starting\n",
     "\n",
-    "In the following exercises, you will need to implement functions defined in the `train_model.py` and `test_model.py` scripts, and you will need to write job scripts called `train_job.slurm` and `test_job.slurm` that will run your code on HPC. **Please write all your code in those files.** You should not submit this notebook with your solutions, and we will not grade it if you do. Please be aware that code written in a Jupyter notebook may run differently when copied into Python modules.\n",
+    "In the following exercises, you will need to implement functions defined in the `train_model.py` and `test_model.py` scripts. **Please write all your code in those files.** You should not submit this notebook with your solutions, and we will not grade it if you do. Please be aware that code written in a Jupyter notebook may run differently when copied into Python modules.\n",
     "\n",
     "The outputs shown in this notebook are the outputs that you should get **when all problems have been completed correctly**. You may obtain different results if you attempt to run the code cells before you have completed the problem set, or if you have completed one or more problems incorrectly.\n",
     "\n",
-    "For part of this assignment, you will be asked to run code on HPC. You will not be able to run code for those problems in Jupyter Notebook.\n",
+    "For part of this assignment, you will be asked to fine-tune a BERT$_\\text{tiny}$ model on the IMDb dataset with hyperparameter tuning. **This will take several hours to run on a laptop with a CPU.** You may want to instead run your code on [Google Colaboratory](https://colab.research.google.com/) using a free GPU.\n",
     "\n",
     "To begin, please run the following `import` statements."
    ]
@@ -46,11 +46,9 @@
    "id": "5110c1a8",
    "metadata": {},
    "source": [
-    "## Problem 1: Setup (70 Points in Total)\n",
+    "## Problem 1: Setup (30 Points in Total)\n",
     "\n",
-    "In this assignment, you will fine-tune a pre-trained Transformer model using libraries provided by [Hugging Face](https://huggingface.co/) (whose name is usually styled using the emoji 🤗). You have already been exposed to Hugging Face in HW 2, where you used the [🤗 Datasets](https://huggingface.co/docs/datasets/index) library to load the IMDb dataset. In the following problems, you will use two additional Hugging Face libraries:\n",
-    "- [🤗 Transformers](https://huggingface.co/docs/transformers/index), which provides pre-trained Transformers implemented as PyTorch modules, as well as code for training and testing models, and \n",
-    "- [🤗 Evaluate](https://huggingface.co/docs/evaluate/index), which provides evaluation metrics such as accuracy and F1.\n",
+    "In this assignment, you will fine-tune a pre-trained Transformer model using libraries provided by [Hugging Face](https://huggingface.co/) (whose name is usually styled using the emoji 🤗). You have already been exposed to Hugging Face in lab, where you used the [🤗 Datasets](https://huggingface.co/docs/datasets/index) library to load the IMDb dataset and the [🤗 Transformers](https://huggingface.co/docs/transformers/index) library to load a pre-trained BERT$_\\text{tiny}$ model. In the following problems, additionally use the [🤗 Evaluate](https://huggingface.co/docs/evaluate/index) library, which provides evaluation metrics such as accuracy and F1.\n",
     "\n",
     "For several parts of this problem, you will need to refer to the [Hugging Face fine-tuning tutorial](https://huggingface.co/docs/transformers/training) for guidance.\n",
     "\n",
@@ -241,7 +239,7 @@
    "id": "cf262f25",
    "metadata": {},
    "source": [
-    "Like in HW 2, the tokenizer object can be called as a function. Doing so will return a fully processed input, ready to be passed to the model."
+    "As we saw in lab, the tokenizer object can be called as a function. Doing so will return a fully processed input, ready to be passed to the model."
    ]
   },
   {
@@ -325,7 +323,7 @@
     "\n",
     "### Problem 1d: Prepare Dataset (Code, 10 Points)\n",
     "\n",
-    "As in HW 2, we will again be using the IMDb dataset provided by 🤗 Datasets."
+    "As in lab, we will be using the IMDb dataset provided by 🤗 Datasets."
    ]
   },
   {
@@ -578,7 +576,8 @@
    "source": [
     "Please base your implementation on the [Hugging Face fine-tuning tutorial](https://huggingface.co/docs/transformers/training), and please consult [Appendix A.2 of the BERT paper](https://arxiv.org/abs/1810.04805) to find out what the maximum input length should be.\n",
     "\n",
-    "### Problem 1e: Freeze Non-Bias Weights (Code, 10 Points)\n",
+    "## Problem 2: Implement Experiment (50 Points in Total)\n",
+    "### Problem 2a: Freeze Non-Bias Weights (Code, 10 Points)\n",
     "\n",
     "At the end of this assignment, you will be comparing a BERT$_{\\text{tiny}}$ model fine-tuned using BitFit to a BERT$_{\\text{tiny}}$ model fine-tuned _without_ BitFit. To run that experiment, you will need to support freezing all non-bias parameters of the model. To do this, please implement the `init_model` function, illustrated below. This function should load a pre-trained BERT classifier model from the Hugging Face Model Hub and optionally freeze non-bias parameters."
    ]
@@ -627,7 +626,7 @@
    "source": [
     "**Hint:** Please consult the [documentation for the function `nn.Module.named_parameters`](https://pytorch.org/docs/stable/generated/torch.nn.Module.html#torch.nn.Module.named_parameters).\n",
     "\n",
-    "### Problem 1f: Set Up Trainer and Tester (Code, 15 Points)\n",
+    "### Problem 2b: Set Up Trainer and Tester (Code, 20 Points)\n",
     "\n",
     "🤗 Transformers provides a [`Trainer` object](https://huggingface.co/docs/transformers/main_classes/trainer) that implements training and testing a neural network. For this problem, please implement the functions `init_trainer` in `train_model.py` and `init_tester` in `test_model.py`, which will set up the `Trainer`s used to train and test your model, respectively."
    ]
@@ -734,7 +733,7 @@
     "\n",
     "Please use the [Hugging Face fine-tuning tutorial](https://huggingface.co/docs/transformers/training) as well as [this forum post](https://discuss.huggingface.co/t/using-trainer-at-inference-time/9378/3) for guidance. You may need to create new functions for this problem, and you may find it useful to learn about [lambda expressions](https://realpython.com/python-lambda/) if you don't know about them already.\n",
     "\n",
-    "### Problem 1g: Set Up Hyperparameter Tuning (Code, 15 Points)\n",
+    "### Problem 2c: Set Up Hyperparameter Tuning (Code, 20 Points)\n",
     "\n",
     "Finally, to complete the experiment setup, you will implement hyperparameter tuning using the [Optuna](https://optuna.org/) framework. Optuna is integrated with 🤗 Transformers, and it can be invoked via the `Trainer.hyperparameter_search` method. Please implement the function `hyperparameter_search_settings` in `train_model.py` by returing the correct keyword arguments for `Trainer.hyperparameter_search`. (Observe that, at the end of `train_model.py`, these keyword arguments are passed to `Trainer.hyperparameter_search` via dictionary unpacking.)  \n",
     "\n",
@@ -748,36 +747,15 @@
     "- [The documentation for `Trainer.hyperparameter_search`](https://huggingface.co/docs/transformers/v4.26.1/en/main_classes/trainer#transformers.Trainer.hyperparameter_search)\n",
     "- [The documentation for Optuna's `GridSampler`](https://optuna.readthedocs.io/en/v2.0.0/reference/generated/optuna.samplers.GridSampler.html)\n",
     "\n",
-    "## Problem 2: Run Experiment (30 Points in Total)\n",
+    "## Problem 3: Run Experiment (20 Points in Total)\n",
     "\n",
-    "To complete the assignment, you will now run your code on HPC using Google Cloud bursting, which we learned how to do in the Week 7 lab.\n",
+    "To complete the assignment, you will now run your code and report on the results. It is recommended that you run your code on [Google Colaboratory](https://colab.research.google.com/) using a free GPU.\n",
     "\n",
-    "### Problem 2a: Prepare Slurm Batch Job (Code, 10 Points)\n",
+    "### Problem 3a: Train Models (Code and Written, 10 Points)\n",
     "\n",
-    "Please prepare a Slurm batch job for fine-tuning a BERT$_{\\text{tiny}}$ model by filling in the template provided in `train_job.slurm`. Your batch job should activate a Conda environment with the appropriate libraries installed and run the `train_model.py` script using one GPU. It should take roughly 20 to 60 minutes to fine-tune a model with all hyperparameter tuning trials.\n",
-    "\n",
-    "If you would like, you may choose to customize the Slurm options \n",
-    "```\n",
-    "#SBATCH --job-name=train_model\n",
-    "#SBATCH --output=/scratch/${USER}/%j_%x.out\n",
-    "#SBATCH --error=/scratch/${USER}/%j_%x.err\n",
-    "```\n",
-    "which control the name of your job and the locations of the job's standard output and error logs, respectively. You may also add the options\n",
-    "```\n",
-    "#SBATCH --mail-type=ALL\n",
-    "#SBATCH --mail-user=<your email address>\n",
-    "```\n",
-    "which will cause Slurm to send you an email when your job starts and ends.\n",
-    "\n",
-    "For this problem, please submit the batch job used to fine-tune a BERT$_{\\text{tiny}}$ model in the next problem, either with or without BitFit. You may also optionally write a batch job to test a model by running `test_model.py`, but since testing is fast enough to run on your personal computer, you are not required to submit it.\n",
-    "\n",
-    "### Problem 2b: Train Models (Code and Written, 10 Points)\n",
-    "\n",
-    "Please run the following two jobs on HPC:\n",
-    "- a job to fine-tune a BERT$_{\\text{tiny}}$ model on the IMDb dataset _with_ BitFit\n",
-    "- a job to fine-tune a BERT$_{\\text{tiny}}$ model on the IMDb dataset _without_ BitFit.\n",
-    "\n",
-    "Please submit the standard output logs for both jobs using the filenames `train_with_bitfit.out` and `train_without_bitfit.out`, respectively.\n",
+    "Please now run the following experimental procedure by running `train_model.py` as a Python script:\n",
+    "- first, fine-tune a BERT$_{\\text{tiny}}$ model on the IMDb dataset _with_ BitFit;\n",
+    "- then, fine-tune a BERT$_{\\text{tiny}}$ model on the IMDb dataset _without_ BitFit.\n",
     "\n",
     "The `train_model.py` script should create a Pickle object containing information about the best hyperparameters found during hyperparameter tuning. Please submit this object, using the filenames `train_results_with_bitfit.p` and `train_results_without_bitfit.p` for your two training runs, respectively. Please also report the highest validation accuracy attained in each of your two training runs, as well as the hyperparameters used in those trials. Please format these results as a table such as the following.\n",
     "\n",
@@ -786,11 +764,9 @@
     "| Without BitFit | | | |\n",
     "| With BitFit | | | |\n",
     "\n",
-    "**Important:** Please make sure to `ssh burst` before submitting your batch job!\n",
+    "### Problem 3b: Test Models and Report Results (Code and Written, 10 Points)\n",
     "\n",
-    "### Problem 2c: Test Models and Report Results (Code and Written, 10 Points)\n",
-    "\n",
-    "For each of your two training runs, please test the model that attained the best validation accuracy across all hyperparameter tuning trials. You may do so by running the `test_model.py` script on HPC or on your personal computer. Once testing is complete, please report your results in the form of a table such as the following.\n",
+    "For each of your two training runs, please test the model that attained the best validation accuracy across all hyperparameter tuning trials. You may do so by running the `test_model.py` script. Once testing is complete, please report your results in the form of a table such as the following.\n",
     "\n",
     "| | # Trainable Parameters | Test Accuracy | \n",
     "|---|---|---|\n",
@@ -819,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
